[project]
name = "fantasy-golf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
]
